# xstitch-abc

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
samples/alphabets/: myalphabet.json
samples/csvs/: myalphabet.csv
xstitch_abcs/: parse.py  write.py
xstitch_alphabet/: letters.py  parse.py  write.py
