[tool.poetry]
name = "xstitch_alphabet"
version = "0.1.0"
description = "Cross stitch alphabet utilities"
authors = ["Audrey Seo <audreyleeseo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
